--- a/TurismoPrueba/app/templates/tempuser/user_form.html
+++ b/TurismoPrueba/app/templates/tempuser/user_form.html
@@ -1,6 +1,16 @@
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul>
+      {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 <form method="POST">
     <input type="text" name="nombre" value="{{ user.nombre if user else '' }}" placeholder="Nombre" required>
-    <input type="email" name="email" value="{{ user.email if user else '' }}" placeholder="Correo" required>
+    <input type="text" name="email" value="{{ user.email if user else '' }}" placeholder="Correo" required>
     <input type="password" name="contrasena" value="{{ user.password if user else '' }}" placeholder="Password" required>
     <input type="text" name="preferencias" value="{{ user.preferencias if user else '' }}" placeholder="Preferencias" required>
     <button type="submit">Guardar</button>
